// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button component should render a button 1`] = `
<div>
  <button
    class="default"
  >
    Click Me
    <canvas
      height="0"
      style="border-radius: inherit; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
      width="0"
    />
  </button>
</div>
`;

exports[`The Button component should render a button 2`] = `
<button
  class="default"
>
  Click Me
  <canvas
    height="0"
    style="border-radius: inherit; height: 100%; left: 0px; position: absolute; top: 0px; width: 100%;"
    width="0"
  />
</button>
`;
